<resources>
    <string name="app_name">CipherB</string>
    <string name="wbaes_test">白盒AES加密</string>
    <string name="wb_encrypt_string">加密字符串(A)</string>
    <string name="wb_encrypt_file">加密文件(A)</string>
    <string name="wb_http">加密HTTP请求(A)</string>
    <string name="wb_qrcode_app">二维码应用(A)</string>
    <string name="key_distribution">密钥分发(S)</string>
    <string name="performance_comparison">加密性能对比(T)</string>
    <string name="advanced_settings">高级设置(T)</string>
    <string name="generic_aes">朴素AES(T)</string>
    <string name="key_management">密钥管理(S)</string>
    <string name="about">关于</string>
    <string name="key_server_url">密钥服务器地址</string>
    <string name="token">token值</string>
    <string name="iv">iv值</string>
    <string name="id">id值</string>
    <string name="plain_text">明文：</string>
    <string name="ciphertext">密文：</string>
    <string name="encrypt">加密</string>
    <string name="temp_iv">临时IV值：</string>
    <string name="force_update">强制检查密钥更新</string>
    <string name="need_url_and_id">请到高级设置中设置密钥服务器地址和id值！</string>
    <string name="iv_padding">使用当前时间补齐IV</string>
    <string name="cipher_ascii">ASCII</string>
    <string name="copy_cipher">复制</string>
    <string name="to_base64">Base64编码</string>
    <string name="decrypt">解密</string>
    <string name="to_byte_string">字节数组的字符串表示</string>
    <string name="key_value">密钥值：</string>
    <string name="input_byte_array">输入的是字节数组</string>
    <string name="raw">欲发送的参数（以raw格式, 例如：id=3）</string>
    <string name="encrypted_request">加密后的请求参数：</string>
    <string name="list_decrypted">服务器解密后获得的参数列表：</string>
    <string name="send_encrypted_request">发送加密的http请求</string>
    <string name="choose_file">选择文件</string>
    <string name="file_path">欲加密的文件地址：</string>
    <string name="save_to">保存到：</string>
    <string name="generate_qrcode">生成二维码</string>
    <string name="refresh_per_min">每分钟刷新一次</string>
    <string name="start_test">开始测试</string>
    <string name="test_generic_aes">朴素AES加密：</string>
    <string name="times_1">16Bytes 1次加密平均时间：</string>
    <string name="times_10">16Bytes 10次加密平均时间：</string>
    <string name="times_100">16Bytes 100次加密平均时间：</string>
    <string name="test_wb_aes">白盒AES加密：</string>
    <string name="load_aes_table">加载AES查找表平均时间：</string>
    <string name="test_time_format">%s%.2f ms</string>
    <string name="demo_send"><![CDATA[id=&msg=hello]]></string>
    <string name="risid">©Risid 2019年毕业设计</string>
    <string name="license">许可协议：</string>
    <string name="dev_key">开发者密钥：</string>
    <string name="token_value">Token：</string>
    <string name="key_id">密钥ID：</string>
    <string name="update_id">更新该ID密钥</string>
    <string name="distribute_key">分发该密钥</string>
</resources>
