<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="1dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="3"
        android:id="@+id/gl_main"
        android:layout_margin="10dp"
        android:layout_weight="10"

        android:orientation="horizontal">

        <LinearLayout
            style="@style/GridLayout"
            android:id="@+id/ll_encrypt_string">
            <ImageView
                style="@style/GridImage"
                android:src="@drawable/encrypt_string"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wb_encrypt_string"/>

        </LinearLayout>
        <LinearLayout
            style="@style/GridLayout"
            android:id="@+id/ll_encrypt_file"
            >
            <ImageView
                style="@style/GridImage"
                android:src="@drawable/encrypt_file"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wb_encrypt_file"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_encrypt_http"
            style="@style/GridLayout">
            <ImageView
                style="@style/GridImage"
                android:src="@drawable/safe_http"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wb_http"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_encrypt_qrcode"
            style="@style/GridLayout">
            <ImageView
                style="@style/GridImage"
                android:src="@drawable/qrcode"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wb_qrcode_app"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_key_distribution"
            style="@style/GridLayout">
            <ImageView
                style="@style/GridImage"
                android:src="@drawable/key_distribution"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key_distribution"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_key_management"
            style="@style/GridLayout">
            <ImageView
                style="@style/GridImage"
                android:src="@drawable/key_management"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key_management"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_generic_aes"
            style="@style/GridLayout">
            <ImageView
                style="@style/GridImage"
                android:src="@drawable/generic_aes"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generic_aes"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_performance_comparison"
            style="@style/GridLayout">
            <ImageView
                style="@style/GridImage"
                android:src="@drawable/performance"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/performance_comparison"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_advanced_settings"
            style="@style/GridLayout">
            <ImageView
                style="@style/GridImage"
                android:src="@drawable/settings"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_settings"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_info"
            style="@style/GridLayout">
            <ImageView
                style="@style/GridImage"
                android:src="@drawable/info"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"/>

        </LinearLayout>


    </GridLayout>


</LinearLayout>