<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PerfCompActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="1dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sl_encrypt_string">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/StrongText"
                    android:layout_marginBottom="10dp"
                    android:text="@string/test_generic_aes"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallText"
                    android:id="@+id/tv_generic_1"
                    android:text="@string/times_1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallText"

                    android:id="@+id/tv_generic_10"
                    android:text="@string/times_10"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallText"
                    android:id="@+id/tv_generic_100"
                    android:text="@string/times_100"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/StrongText"
                    android:layout_marginBottom="10dp"
                    android:text="@string/test_wb_aes"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallText"

                    android:id="@+id/tv_wb_load"
                    android:text="@string/load_aes_table"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallText"

                    android:id="@+id/tv_wb_1"
                    android:text="@string/times_1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:id="@+id/tv_wb_10"
                    style="@style/SmallText"
                    android:text="@string/times_10"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SmallText"

                    android:id="@+id/tv_wb_100"
                    android:text="@string/times_100"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ProgressBar
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:id="@+id/bt_encrypt"
                        android:text="@string/start_test"/>
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>




</LinearLayout>