<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EncryptStringActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="1dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sl_encrypt_string">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <LinearLayout
                style="@style/LayoutList">
                <TextView
                    style="@style/StrongText"

                    android:textSize="20sp"
                    android:text="@string/plain_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:minLines="5"
                    android:padding="6dp"
                    android:layout_marginTop="10dp"

                    android:gravity="top"
                    android:textColor="@color/colorPrimaryDark"

                    android:background="@drawable/order_edt_note_bg" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/StrongText"

                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:text="@string/temp_iv"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_iv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                style="@style/LayoutList">
                <TextView
                    style="@style/StrongText"
                    android:textSize="20sp"
                    android:text="@string/ciphertext"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:minLines="5"
                    android:padding="6dp"
                    android:layout_marginTop="10dp"

                    android:gravity="top"
                    android:textColor="@color/colorPrimaryDark"

                    android:background="@drawable/order_edt_note_bg" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="30dp"
                    android:text="@string/force_update"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/encrypt"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>




</LinearLayout>