<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="1dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:id="@+id/ll_settings_main">
        <LinearLayout
            style="@style/LayoutList">
            <TextView
                style="@style/StrongText"
                android:text="@string/key_server_url"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/LayoutList">
            <TextView
                style="@style/StrongText"
                android:text="@string/id"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            style="@style/LayoutList">
            <TextView
                style="@style/StrongText"
                android:text="@string/token"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/LayoutList">
            <TextView
                style="@style/StrongText"
                android:text="@string/iv"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textPassword"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>