<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EncryptHTTPActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="1dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sl_encrypt_string">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="30dp"

                    android:textColor="@color/colorPrimaryDark"
                    app:backgroundTint="@color/colorPrimary"
                    android:id="@+id/bt_check_key"
                    android:text="@string/force_update"/>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ProgressBar
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:id="@+id/bt_encrypt"
                        android:text="@string/send_encrypted_request"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                style="@style/LayoutList">
                <TextView
                    style="@style/StrongText"

                    android:textSize="18sp"
                    android:text="@string/raw"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:minLines="5"
                    android:padding="6dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/et_plain_text"

                    android:gravity="top"
                    android:textColor="@color/colorPrimaryDark"

                    android:background="@drawable/order_edt_note_bg" />

            </LinearLayout>
            <LinearLayout
                style="@style/LayoutList">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/StrongText"

                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:text="@string/temp_iv"/>
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_iv"
                        android:layout_width="match_parent"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_height="40dp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"


                        android:textColor="@color/colorPrimaryDark"

                        android:background="@drawable/order_edt_note_bg"
                        />

                </LinearLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/cb_iv_padding"
                    android:text="@string/iv_padding"/>
            </LinearLayout>



            <LinearLayout
                style="@style/LayoutList">
                <TextView
                    style="@style/StrongText"
                    android:textSize="20sp"
                    android:text="@string/encrypted_request"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:minLines="5"
                    android:padding="6dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/et_cipher_text"

                    android:gravity="top"
                    android:textColor="@color/colorPrimaryDark"

                    android:background="@drawable/order_edt_note_bg" />
            </LinearLayout>

            <LinearLayout
                style="@style/LayoutList">
                <TextView
                    style="@style/StrongText"
                    android:textSize="20sp"
                    android:text="@string/list_decrypted"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/et_response">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>




        </LinearLayout>
    </ScrollView>




</LinearLayout>